Fixing input focus issue and support modal on mobile

--- a/src/components/Gallery/Gallery.scss
+++ b/src/components/Gallery/Gallery.scss
@@ -61,3 +61,15 @@
 .modal-slideshow-example2__content {
     display: none;
 }
+
+@media only screen and (max-width: 600px) {
+    .ReactModal__Content {
+        img {
+            width: 100%;
+        }
+    }
+
+    .app-input {
+        width: 95%;
+    }
+}
